exports[`FirmwareDialog should render empty div if not visible 1`] = `<div />`;

exports[`FirmwareDialog should render visible dialog with custom text 1`] = `
<ConfirmationDialog
  isInProgress={false}
  isVisible={true}
  onCancel={[Function]}
  onOk={[Function]}
  text="Do you confirm?" />
`;

exports[`FirmwareDialog should render visible dialog with default text for given port 1`] = `
<ConfirmationDialog
  isInProgress={false}
  isVisible={true}
  onCancel={[Function]}
  onOk={[Function]}
  text="The development kit on /dev/tty1 (1337) will be programmed with the required firmware. Would you like to proceed?" />
`;
